--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>flatironschool</title>
+ </head>
+ <body>
+    <h1>flatironschool</h1>
+    <a href="https://flatironschool.com">Flatiron School</a>
+ </body>
+ </html>
